	* patches/icedtea-f2i-overflow.patch,
	* patches/icedtea-format-warnings.patch,
	* patches/icedtea-fortify-source.patch,
	* patches/icedtea-lib64.patch,
	* patches/icedtea-no-bcopy.patch:
	Removed, applied upstream.
	* HACKING: Updated.
	* Makefile.am: Bump to b48.
	* patches/hotspot/original/icedtea-includedb.patch,
	* patches/icedtea-libraries.patch: Recreated.

2009-02-25  Omair Majid  <omajid@redhat.com>

	* plugin/icedtea/sun/applet/PluginMain.java:
	New File. Implements a Java console for IcedTea Plugin.
	* plugin/icedtea/sun/applet/JavaConsole.java
	New constants PLUGIN_STDERR_FILE and PLUGIN_STDOUT_FILE for filenames that
	stdout/stderr is redirected to.
	(PluginMain): Always write stdout/stderr to
	PLUGIN_STDERR_FILE/PLUGIN_STDOUT_FILE.
	(TeeOutputStream): New class. Copies a PrintStream to a file.

2009-02-24  Gary Benson  <gbenson@redhat.com>

	* ports/hotspot/src/share/vm/shark/sharkBlock.cpp
	(SharkBlock::get_basic_callee): Removed.
	(SharkBlock::get_direct_callee): New method.
	(SharkBlock::get_virtual_callee): Likewise.
	(SharkBlock::get_interface_callee): Removed cache parameter.
	(SharkBlock::get_callee): Removed.
	(SharkBlock::do_call): Perform caller selection inline.

	* ports/hotspot/src/share/vm/shark/sharkBlock.hpp
	(SharkBlock::get_basic_callee): Removed.
	(SharkBlock::get_direct_callee): New method.
	(SharkBlock::get_virtual_callee): Likewise.
	(SharkBlock::get_interface_callee): Changed prototype.
	(SharkBlock::get_callee): Removed.

2009-02-23  Lillian Angel  <langel@redhat.com>

	* AUTHORS: Added Mark Reinhold.

2009-02-23  Mark Reinhold  <mr@sun.com>

	* Makefile.am: Set PRODUCT_NAME to OpenJDK, unless doing a CACAO
	build (set to IcedTea).
	* patches/icedtea-version.patch: Introduced two new make variables:
	JDK_DERIVATIVE_NAME to set "IcedTea6 <version>" and
	DISTRO_PACKAGE_VERSION carries the argument given to the
	--with-pkgversion configure option.

2009-02-23  Gary Benson  <gbenson@redhat.com>